--- a/README
+++ b/README
@@ -1,16 +1,19 @@
+This is a research attempt to construct script (or event schema) from the Gigaword Corpus.
+
 CONTENTS (VERSION 0.0.1)
 
 -data/ : A set of test sentences
 -lib/: The full library used
 -src/: Clausie source code
--clausie.jar: A runnable .jar file
 
 LICENSE
 
-* This distribution uses Clausie v. 0.0.1 (with modification), which is distributed under the Attribution-ShareAlike (ver. 3.0 or later) [http://creativecommons.org/licenses/by-sa/3.0/legalcode]
+* This distribution uses Clausie v. 0.0.1 (http://www.mpi-inf.mpg.de/departments/d5/software/clausie/) (with modification), which is distributed under the Attribution-ShareAlike (ver. 3.0 or later) [http://creativecommons.org/licenses/by-sa/3.0/legalcode]
 
 * This distribution includes libraries of the Stanford Parser v. 2.0.5 [http://www-nlp.stanford.edu/software/lex-parser.shtml] which is licensed under the GNU General Public License (v2 or later) [http://www.gnu.org/licenses/gpl-2.0.html]
 
-* Library for reading the Annotated Gigaword is Agiga, which is distribued under the GNU General Public License (v2 or later) (http://www.gnu.org/licenses/old-licenses/gpl-2.0.html)
+* The data used here is Annotated Gigaword as described in (http://www.cs.jhu.edu/~vandurme/papers/NapolesGormleyVanDurmeNAACL12.pdf) distributed by LDC (http://catalog.ldc.upenn.edu/LDC2012T21). The data is not provided as part of the repository. Users need to obtain a copy from LDC directly.
+
+* Library for reading the Annotated Gigaword is Agiga (https://code.google.com/p/agiga/), which is distribued under the GNU General Public License (v2 or later) (http://www.gnu.org/licenses/old-licenses/gpl-2.0.html)
 
 As explained in the respective license codes both Clausie and the Stanford Parser come with absolutely no warranty.
